Last few changes - added a few mutations.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.datasource.url=jdbc:h2:mem:doggraphql
+spring.datasource.initialization-mode=always
 
 graphql.servlet.mapping=/graphql
 graphql.servlet.enabled=true
@@ -9,3 +10,4 @@ graphql.servlet.corsEnabled=true
 graphiql.enabled=true
 graphiql.endpoint=/graphql
 graphiql.mapping=graphiql
+
